# Watchdog

./: CMakeLists.txt  README.md  main.cpp  makefile  siem_defines.cpp  siem_defines.hpp  siem_startup.cpp  siem_startup.hpp
UML/: SIEM_architecture.drawio  SIEM_architecture_action.drawio
aggregation_module/: aggr_type_implementaion.hpp  aggr_type_implementation.cpp  aggr_type_implementation.hpp  aggregation_module_initializer.cpp  aggregation_module_initializer.hpp  aggregation_serializer_visitor.cpp  aggregation_serializer_visitor.hpp  aggregator_implementation.cpp  aggregator_implementation.hpp  aggregator_serializer.cpp  aggregator_serializer.hpp  grabber_base.cpp  grabber_base.hpp  grabbers.cpp  grabbers.hpp  net_grabbers.cpp  net_grabbers.hpp  symptom_grabber.cpp  symptom_grabber.hpp  system_grabbers.cpp  system_grabbers.hpp
configs/: aggregation_config.json  options.json  symptoms_config.json
correlation_module/: correlation_module_initializer.cpp  correlation_module_initializer.hpp  symptom_checking.cpp  symptom_checking.hpp  symptom_custom_checking.cpp  symptom_custom_checking.hpp  symptom_implementation.cpp  symptom_implementation.hpp  symptom_ssh_checking.cpp  symptom_ssh_checking.hpp
correlation_module/correlation/: correlation.cpp  correlation.hpp  python_invoke.cpp  python_invoke.hpp
correlation_module/correlation/machine_learning/: correlation_ml.cpp  correlation_ml.hpp
correlation_module/correlation/machine_learning/python/: defines.py  groups_chains_constructor.py  method_run.py  normalize.py  symptom_chain_creator.py  symptom_files.txt  weights.py
correlation_module/correlation/machine_learning/python/methods/DecisionTree/: DecisionTreeCorrelationTest.py  DecisionTreeCorrelationTrain.py
correlation_module/correlation/machine_learning/python/methods/KNeighboor/: KNeighboorCorrelation.py  KNeighboorCorrelationTest.py  (+1 more)
correlation_module/correlation/machine_learning/python/models/: DecisionTreeParams.pkl  LogisticRegressionParams.pkl
description_module/: configuration.cpp  configuration.hpp  description_table.cpp  description_table.hpp  search_aggr_info.cpp  search_aggr_info.hpp  types_resolver.cpp  types_resolver.hpp
exception_module/: exceptions.hpp
json_files/: iptables_log.json  ssh_log.json
samples/: aggregation_config.json
unit_tests/: Makefile  Readme.md  date_time_test.hpp  description_table_test.hpp  filesystem_siem_test.hpp  framework_downloader.sh  json_test.hpp  run_tests.sh  runner  runner.cpp  string_manager_test.hpp  syntax_analyzer_test.hpp  tests_runner.sh
unit_tests/SrcTests/: JsonStreamTest.h  SIEMStreamFilesystemTest.h  SIEMStreamMemoryTest.h
utility_module/: data_storage.hpp  date_time.cpp  date_time.hpp  encryption.cpp  encryption.hpp  filesystem_siem.cpp  filesystem_siem.hpp  format_string.cpp  format_string.hpp  json.cpp  json.hpp  json_proc.cpp  json_proc.hpp  regex_siem.cpp  regex_siem.hpp  semaphore.cpp  semaphore.hpp  siem_filesystem.cpp  siem_filesystem.hpp  stream_siem.cpp  stream_siem.hpp  string_manager.cpp  string_manager.hpp  syntax_analyzer.cpp  syntax_analyzer.hpp  thread_pool.hpp  thread_pool_impl.hpp
utility_module/time/: date_time.cpp  date_time.hpp
(+4 files in other folders)
